--- a/src/app/components/reference/reference.component.html
+++ b/src/app/components/reference/reference.component.html
@@ -60,7 +60,7 @@
 
 <div class="container">
     <h1>Liste des composants</h1>
-        <input class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
+        <input #inputText class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
     
 </div>
 
