--- a/src/app/components/admin-home/admin-home.component.css
+++ b/src/app/components/admin-home/admin-home.component.css
@@ -101,7 +101,8 @@ mat-table{
     border-radius: 3px;
     background-color: red;
     position: absolute;
-    right: 0;
+    right: 3px;
+    top: 3px;
 }
 
 #loading{
