--- a/src/app/components/modifier-form/modifier-form.component.html
+++ b/src/app/components/modifier-form/modifier-form.component.html
@@ -77,7 +77,7 @@
   <h2 >Modifier Réclamation</h2>
 
     <div class="form-group m-8 row">
-        <label class="col-sm-4  col-form-label" for="ville"><b>Ville <small *ngIf="newForm.villeId==0" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
+        <label class="col-sm-4  col-form-label" for="ville"><b>Ville <small  id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
         <div  class="col-sm-5">
             <mat-form-field  >
                 <mat-select [(ngModel)]="newForm.villeId"  [formControl]="selected"  (selectionChange)="onSelectVille($event.value);valider()"  name="ville" placeholder="ville" >
@@ -98,7 +98,7 @@
       </div>  
       <div class="form-group m-8 row">
           
-          <label class="col-sm-4  col-form-label" for=""><b>Véhicule <small *ngIf="newForm.vehiculeId==0" id="fileHelpId" style="color: red;" class="form-text">*</small></b> &nbsp; &nbsp;<button *ngIf="showAddDevice" class="btn btn-sm btn-primary" (click)="addVehicule(newForm.villeId)">+</button></label>
+          <label class="col-sm-4  col-form-label" for=""><b>Véhicule <small  id="fileHelpId" style="color: red;" class="form-text">*</small></b> &nbsp; &nbsp;<button *ngIf="showAddDevice" class="btn btn-sm btn-primary" (click)="addVehicule(newForm.villeId)">+</button></label>
           <div class="col-sm-5">
               <mat-form-field >
                   <mat-select [(ngModel)]="newForm.vehiculeId" [formControl]="selectedVehicule" (selectionChange)="valider()" name="vehicule" placeholder="Véhicule" >
@@ -119,7 +119,7 @@
       <!--{{newForm | json}}-->
   
       <div class="form-group m-8 row">
-          <label class="col-sm-4  col-form-label" for=""><b>Produit <small *ngIf="newForm.produitId==0" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
+          <label class="col-sm-4  col-form-label" for=""><b>Produit <small  id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
           <div class="col-sm-5">
               <mat-form-field >
                   <mat-select [(ngModel)]="newForm.produitId" [formControl]="selectedProduit" (selectionChange)="onSelectProduit($event.value);valider()" name="produit" placeholder="Produit" >
@@ -137,10 +137,10 @@
       </div>
       
       <div class="form-group m-8 row">
-          <label class="col-sm-4  col-form-label" for=""><b>Probléme/Panne <small *ngIf="newForm.problemeId==0" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
+          <label class="col-sm-4  col-form-label" for=""><b>Probléme/Panne <small *ngIf="!Traite" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
           <div class="col-sm-5">
               <mat-form-field >
-                  <mat-select [(ngModel)]="newForm.problemeId" [formControl]="selectedProbleme" (selectionChange)="onSelectProbleme($event.value);valider()" multiple  name="probleme" placeholder="Probleme" >
+                  <mat-select [(ngModel)]="newForm.problemeId" [formControl]="selectedProbleme" (selectionChange)="valider()" multiple  name="probleme" placeholder="Probleme" >
                     <mat-option>
                       <ngx-mat-select-search noEntriesFoundLabel="'Aucun Probléme'" placeholderLabel="Cherche" (keyup)="fProbleme($event)"></ngx-mat-select-search>
                     <div class="cancelMatSearche"></div>
@@ -156,7 +156,7 @@
           
       </div>
       <div class="form-group m-8 row">
-          <label class="col-sm-4  col-form-label" for=""><b>Solution <small *ngIf="newForm.statut==1 && !Traite" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
+          <label class="col-sm-4  col-form-label" for=""><b>Solution <small *ngIf="!Traite" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
           <div class="col-sm-5">
               <mat-form-field >
                   <mat-select [(ngModel)]="newForm.solutionId" [formControl]="selectedSolution" (selectionChange)="valider()" multiple name="solution" placeholder="Solution" >
@@ -225,10 +225,12 @@
           
       </div>
       <div class="form-group m-8 row">
-          <label class="col-sm-2  col-form-label" for=""><b>Photo</b></label>
+          <label class="col-sm-2  col-form-label" for=""><b>Piéce jointe</b></label>
           <div class="col-sm-5">
             <!--accept=".png,.jpg, .jpeg,.jfif,.doc,.docx,.zip,.rar,.pdf"-->
               <input type="file" #inputFile  style="margin-bottom: 5px;" (click)="charge()" (cancel)="cancel()" (change)="onFileSelected($event)" id="file" class="form-control" name="file">
+              <small class="form-text text-muted">Taille Max 20Mo </small><br>
+              <small class="form-text text-muted">Format : jpeg ,mp4 ,word ,pdf ,zip </small>
               <img style="visibility:hidden;" #loading id="loadin" src="../../../assets/loading.gif.gif" width="20px" height="20px"> <h5 *ngIf="newForm.file" style="color: blue;">File: '{{newForm.file}}' <mat-icon (click)="cancel()">cancel</mat-icon></h5>
           </div>
           
