--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -56,7 +56,7 @@
         
         <div class="container">
             <h1>Liste Solutions</h1>
-                <input class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
+                <input #inputText class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
             
         </div>
        
