--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -35,6 +35,7 @@
                     <label for="email"><b>Email</b></label>
                     <input [(ngModel)]="userSelected.email" formControlName="email" type="text" name="email" class="form-control" >
                     <small *ngIf="email.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                    <small class="form-text text-muted">Ex:aa&commat;aa.aa</small><br>
                     
                 </div>
                 <div class="form-group  py-2">
@@ -112,7 +113,7 @@
 
 <div class="container">
     <h1>Liste Users</h1>
-        <input class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
+        <input #inputText class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
     
 </div>
 
