--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -148,7 +148,7 @@
 <div *ngIf="!hideAdd || !hide" class="backgroundBody">
 
 </div>
-<div id="lamalm" *ngIf="idUser!=null && is_admin=='ADMIN' " class="container mt-5">
+<div  *ngIf="idUser!=null && is_admin=='ADMIN' " class="container mt-5">
 
    
     <div class="container">
